--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -77,6 +77,7 @@
   font-size: 1rem;
   line-height: 26px;
   font-weight: 400;
+  text-align: center;
 }
 .additionalInfo figcaption {
   margin-top: 48px;
